fix spacing for a blockquote with a p inside

--- a/packages/dnb-ui-lib/src/style/themes/theme-ui/spacing.scss
+++ b/packages/dnb-ui-lib/src/style/themes/theme-ui/spacing.scss
@@ -65,4 +65,8 @@
       margin-bottom: 0;
     }
   }
+
+  blockquote p:last-child {
+    margin-bottom: 0;
+  }
 }
